add chart animation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 /chart-002/nbproject/private/
 /chart-002/build/
+/chart-001 - Copy/build/
+/chart-001 - Copy/dist/
+/chart-001 - Copy/nbproject/private/
+/chart -001 animation/build/
+/chart -001 animation/dist/
+/chart -001 animation/nbproject/private/
+/chart-001 animation/build/
+/chart-001 animation/dist/
+/chart-001 animation/nbproject/private/
+/chart-001-animation/build/
+/chart-001-animation/nbproject/private/
+/chart-001-animation/dist/
