--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@
 /chart-001-animation/build/
 /chart-001-animation/nbproject/private/
 /chart-001-animation/dist/
+/chart-gauge/nbproject/private/
+/chart-bar-animation/nbproject/private/
+/chart-polar-area/nbproject/private/
+/chart-gauge/build/
+/chart-gauge/dist/
+/chart-bar-animation/build/
+/chart-bar/build/
+/chart-polar-area/build/
