add orson 3d chart

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@
 /chart-polar-area/build/
 /chart-gantt/nbproject/private/
 /chart-gantt/build/
+/orson-3d-chart/nbproject/private/
+/orson-3d-chart/build/
+/orson-3d-chart/dist/
